# zbra

./: Cargo.toml  README.md  rust-toolchain.toml
.buildkite/: pipeline.yml
.github/workflows/: ci.yml
docs/: compression-pipeline.md  design.md  development.md  error-handling.md  schema.md
tests/: compatibility.rs  roundtrip.rs  schema.rs
zbra-cli/: Cargo.toml  README.md
zbra-cli/src/: main.rs
zbra-core/: Cargo.toml
zbra-core/benches/: README.md  compression.rs  simple-test.rs  streaming-io.rs
zbra-core/proptest-regressions/: compression.txt
zbra-core/src/: binary.rs  compression.rs  data.rs  error.rs  lib.rs  logical.rs  striped.rs  time.rs
zbra-core/src/table/: data.rs  encoding.rs  logical.rs  mod.rs  schema.rs  striped.rs
zbra-core/tests/: boundary-validation.rs  compression-pipeline.rs  error.proptest-regressions  error.rs  generator-consistency.rs  integration-validation.rs  production-data.rs  roundtrip.proptest-regressions  roundtrip.rs  schema-validation.rs
zbra-core/tests/common/: mod.rs
