[package]
name = "zbra-core"
version = "0.1.0"
authors = ["Ryan James Spencer <spencer.ryanjames@gmail.com>"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

[dev-dependencies]
proptest = "1.7"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simple-test"
harness = false
